--- a/index.html
+++ b/index.html
@@ -163,19 +163,17 @@
           objetivos afeta positivamente a correta previsão
         </p>
       </div>
-      
+    </section>
 
     <section class="newsletter">
       <div class="newsletter-info">
         <h1>Newsletter</h1>
         <p>assine e fique por dentro das novidades</p>
-        
       </div>
       <form class="newsletter-form">
-        <input type="text" placeholder="Seu e-mail">
+        <input type="text" placeholder="Seu e-mail" />
         <button type="submit">Assinar</button>
-        </form>
-
+      </form>
     </section>
     <footer class="footer">
       <p>FlexBlog © Todos os direitos reservados.</p>
